[package]
name = "janus"
version = "0.1.0"
edition = "2024"

[features]
default = ["atomic-deploy"]
atomic-deploy = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
tera = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2"
dialoguer = "0.11"
walkdir = "2"
glob = "0.3"
dirs = "6"
serde_json = "1"
